deploy/kubernetes/apisconsiderations-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apisconsiderationsservice
  namespace: apisconsiderations
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apisconsiderations
    microservice: app
