deploy/kubernetes/apisconsiderations-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apisconsiderationsingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apisconsiderations      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apisconsiderations
        backend:
          serviceName: apisconsiderationsservice
          servicePort: http
